--- a/md/分布式锁.md
+++ b/md/分布式锁.md
@@ -34,6 +34,14 @@
 所以利用以上两个特性可以保证在同一时刻只会有一个进程获得锁，并且不会出现死锁(最坏的情况就是超时自动删除 key)。
 
 
+EX second ：设置键的过期时间为 second 秒。 SET key value EX second 效果等同于 SETEX key second value 。
+PX millisecond ：设置键的过期时间为 millisecond 毫秒。 SET key value PX millisecond 效果等同于 PSETEX key millisecond value 。
+NX ：只在键不存在时，才对键进行设置操作。 SET key value NX 效果等同于 SETNX key value 。
+XX ：只在键已经存在时，才对键进行设置操作。
+
+nxxx： 只能取NX或者XX，如果取NX，则只有当key不存在是才进行set，如果取XX，则只有当key已经存在时才进行set
+expx： 只能取EX或者PX，代表数据过期时间的单位，EX代表秒，PX代表毫秒。
+time： 过期时间，单位是expx所代表的单位。
 ### 加锁
 
 实现代码如下：
@@ -44,6 +52,7 @@
     private static final String SET_WITH_EXPIRE_TIME = "PX";
     
     public  boolean tryLock(String key, String request) {
+        //                               String key,     String value,   String nxxx,      String expx,    int time
         String result = this.jedis.set(LOCK_PREFIX + key, request, SET_IF_NOT_EXIST, SET_WITH_EXPIRE_TIME, 10 * TIME);
 
         if (LOCK_MSG.equals(result)){
@@ -56,10 +65,6 @@
 
 注意这里使用的 jedis 的
 
-EX second ：设置键的过期时间为 second 秒。 SET key value EX second 效果等同于 SETEX key second value 。
-PX millisecond ：设置键的过期时间为 millisecond 毫秒。 SET key value PX millisecond 效果等同于 PSETEX key millisecond value 。
-NX ：只在键不存在时，才对键进行设置操作。 SET key value NX 效果等同于 SETNX key value 。
-XX ：只在键已经存在时，才对键进行设置操作。
 ```java
 String set(String key, String value, String nxxx, String expx, long time);
 ```
